@@ -21,21 +21,23 @@
 			language/en-GB/en-GB.plg_content_example.sys.ini
 		-->
 	</files>
-	<languages>
+	<languages folder="language">
 		<!--
 			these files will be installed in the administrator/language folder.
 		-->
-		<language tag="en-GB">en-GB.plg_content_example.ini</language>
-		<language tag="en-GB">en-GB.plg_content_example.sys.ini</language>
+		<language tag="en-GB">en-GB/en-GB.plg_content_example.ini</language>
+		<language tag="en-GB">en-GB/en-GB.plg_content_example.sys.ini</language>
 	</languages>
 
 	<config>
 		<fields name="params">
 
-			<field name="field1" type="text"
-				description="Example field 1"
-				label="Example field 1"
-			/>
+			<fieldset name="basic">
+				<field name="field1" type="text"
+					description="Example field 1"
+					label="Example field 1"
+				/>
+			</fieldset>
 
 			<fieldset name="advanced">
 				<field name="field2" type="text"
