@@ -4,5 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_EXAMPLE= "Content - Example"
+PLG_CONTENT_EXAMPLE="Content - Example"
 PLG_CONTENT_EXAMPLE_XML_DESCRIPTION="This is a description of the functionnalities of this plugin."
+COM_PLUGINS_EXAMPLE_FIELDSET_LABEL="Example"
